dependency pinning + core 1.0.0

--- a/mops.toml
+++ b/mops.toml
@@ -1,23 +1,23 @@
 [package]
 name = "http-assets"
 description = "A library implementation of the IC Assets Canister with v2 certification"
-version = "0.1.0"
+version = "0.2.0"
 repository = "https://github.com/edjcase/http-assets"
 license = "MIT"
 keywords = ["certified", "http", "request", "streaming", "assets"]
 
 [dependencies]
-base = "0.16.0"
-http-types = "1.0.1"
-map = "9.0.1"
-certified-assets = "0.6.0"
-ic = "3.2.0"
-itertools = "0.2.2"
-vector = "0.4.2"
-http-parser = "0.4.1"
-sha2 = "0.1.6"
-memory-region = "1.3.2"
-base-x-encoder = "2.0.0"
+"base@0" = "0.16.0"
+"http-types@1" = "1.0.1"
+"map@9" = "9.0.1"
+"certified-assets@0" = "0.6.0"
+"ic@3" = "3.2.0"
+"itertools@0" = "0.2.2"
+"vector@0" = "0.4.2"
+"http-parser@0" = "0.4.1"
+"sha2@0" = "0.1.6"
+"memory-region@1" = "1.3.2"
+"base-x-encoder@2" = "2.1.0"
 
 [dev-dependencies]
 test = "2.1.1"
@@ -28,5 +28,4 @@ deflate = "0.1.0"
 
 [toolchain]
 wasmtime = "15.0.0"
-moc = "0.14.14"
 pocket-ic = "4.0.0"
